# Personal-Ultimate-Smart-Dev-Security-Dashboard

./: .gitignore  ADVANCED_BLUEPRINT_PLAN.md  ADVANCED_DEEP_DIVE_SPECIFICATIONS.md  ADVANCED_JARVIS_INTELLIGENCE_SYSTEM.md  ADVANCED_UI_UX_DESIGN.md  BRAND_DESIGN_SYSTEM.md  CENTRALIZED_MONITORING_SYSTEM.md  COMPLETE_ULTIMATE_BLUEPRINT.md  CONTRIBUTING.md  COPILOT_AUTONOMOUS_DEVELOPMENT_GUIDE.md  CUSTOM_SECURITY_IMPLEMENTATION.md  ENHANCED_JARVIS_AI_SYSTEM.md  ENTERPRISE_SECURITY_FORTRESS.md  JARVIS_CHAT_SYSTEM.md  MASTER_COMPLETE_BLUEPRINT.md  MASTER_IMPLEMENTATION_INDEX.md  NOVASHIELD_2025_COMPLETE_MASTER_BLUEPRINT.md  NOVA_SHIELD_INTEGRATION.md  PROJECT_STRUCTURE_TEMPLATE.md  README.md  SECURITY.md  SMART_MONITORING_ALERTS_SYSTEM.md  SMART_MONITORING_AND_ALERTS.md  TECHNICAL_IMPLEMENTATION_GUIDE.md  ULTIMATE_COMPLETE_BLUEPRINT.md  ULTIMATE_CONSOLIDATED_BLUEPRINT.md  ULTIMATE_ENHANCED_SYSTEM.md  ULTRA_ADVANCED_IMPLEMENTATION_GUIDE.md  development_progress.md  workflowusageguide.md
.github/: dependabot.yml
.github/workflows/: README.md  auto-improvement.yml.disabled  ci.yml  ci.yml.disabled  monitoring.yml.disabled  novashield-master.yml  security.yml  verification.yml
nova-dashboard/: .gitignore  Makefile  README.md
nova-dashboard/backend/: Dockerfile  package.json  tsconfig.json
nova-dashboard/backend/@types/: index.d.ts
nova-dashboard/backend/src/: server.ts
nova-dashboard/backend/src/auth/: behavioralBiometrics.ts  zeroTrustAuth.ts
nova-dashboard/backend/src/config/: environment.ts
nova-dashboard/backend/src/messaging/: messageQueue.ts
nova-dashboard/backend/src/middleware/: apiGateway.ts  errorHandler.ts
nova-dashboard/backend/src/routes/: auth.ts  crypto.ts  development.ts  gateway.ts  health.ts  index.ts  logging.ts  messaging.ts  monitoring.ts  security.ts  terminal.ts
nova-dashboard/backend/src/security/: auditLogger.ts  keyManager.ts  quantumCrypto.ts  securityMonitor.ts
nova-dashboard/backend/src/services/: distributedLogging.ts  healthCheck.ts
nova-dashboard/backend/src/types/: node.d.ts
nova-dashboard/config/: gateway.json  health.json  logging.json  messaging.json
nova-dashboard/config/monitoring/: prometheus-dev.yml
nova-dashboard/docker/: docker-compose.dev.yml  docker-compose.yml
nova-dashboard/docker/configs/: redis-dev.conf
nova-dashboard/frontend/: Dockerfile  nginx.conf  package.json  tsconfig.json
nova-dashboard/frontend/public/: index.html  manifest.json
nova-dashboard/frontend/src/: App.tsx  index.tsx
nova-dashboard/monitoring-service/: Dockerfile  go.mod  main.go
nova-dashboard/scripts/development/: setup.sh  start-dev.sh
nova-dashboard/security-engine/: Dockerfile  requirements.txt
nova-dashboard/security-engine/src/: main.py
nova-dashboard/terminal-service/: Cargo.toml  Dockerfile
nova-dashboard/terminal-service/src/: main.rs
(+11 files in other folders)
