[package]
name = "novashield-terminal-service"
version = "1.0.0"
authors = ["NovaShield Team"]
edition = "2021"
description = "NovaShield 2025 Terminal Service - High-performance terminal emulation with security"
license = "MIT"
repository = "https://github.com/MrNova420/Personal-Ultimate-Smart-Dev-Security-Dashboard"

[dependencies]
# Async Runtime
tokio = { version = "1.26", features = ["full"] }
async-std = "1.12"
futures = "0.3"

# WebSocket & Networking
tokio-tungstenite = "0.18"
tungstenite = "0.18"
warp = "0.3"
hyper = { version = "0.14", features = ["full"] }

# Terminal & PTY
portable-pty = "0.8"
vte = "0.11"
termios = "0.3"
nix = "0.26"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.7"

# Security & Cryptography
ring = "0.16"
rustls = "0.20"
webpki-roots = "0.22"
argon2 = "0.4"
rand = "0.8"
uuid = { version = "1.3", features = ["v4", "serde"] }

# Logging & Monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
env_logger = "0.10"

# Configuration
config = "0.15"
clap = { version = "4.1", features = ["derive"] }

# Database & Storage
rusqlite = { version = "0.29", features = ["bundled"] }
redis = { version = "0.23", features = ["tokio-comp"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# System Information
sysinfo = "0.28"
libc = "0.2"

# Process Management
subprocess = "0.2"
shared_child = "1.0"

# File System Operations
walkdir = "2.3"
notify = "5.1"
tempfile = "3.5"

# Performance & Memory
parking_lot = "0.12"
crossbeam = "0.8"
rayon = "1.7"

# Time & Date
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

[dev-dependencies]
# Testing
criterion = "0.4"
proptest = "1.1"
mockall = "0.11"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[[bin]]
name = "terminal-service"
path = "src/main.rs"

[lib]
name = "terminal_service"
path = "src/lib.rs"