[package]
name = "novashield-terminal-service"
version = "1.0.0"
authors = ["NovaShield Team"]
edition = "2021"
description = "NovaShield 2025 Terminal Service - High-performance terminal emulation with security"

[dependencies]
# Web framework
actix-web = "4.4"
tokio = { version = "1.26", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
env_logger = "0.10"
log = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.3", features = ["v4", "serde"] }

[[bin]]
name = "terminal-service"
path = "src/main.rs"